Some refactorings to make the playbook more usable

--- a/apb/roles/common-definitions/tasks/main.yml
+++ b/apb/roles/common-definitions/tasks/main.yml
@@ -13,37 +13,15 @@
     openshift_token is none or
     openshift_token|trim() == ""
 
-- name: Verify there is a node with env=infra label
-  command: "oc get nodes -o jsonpath='{.items[?(@.metadata.labels.env==\"infra\")].metadata.name}'"
-  register: infranodes
-
-- name: Modify nodeselector for {{ namespace }} so that it goes to an infra node if there is an infra node
-  command: "oc annotate namespace/{{ namespace }} openshift.io/node-selector=\"env=infra\" --overwrite"
-  when: infranodes.stdout != ""
-
 - name: Verify user can create projects
   command: "oc auth can-i create project"
   register: canicreateprojects
   failed_when: canicreateprojects.stdout != 'yes'
+  when: create_projects
 
 - name: Verify user can delete projects
   command: "oc auth can-i delete project"
   register: canideleteprojects
   failed_when: canideleteprojects.stdout != 'yes'
+  when: create_projects
 
-- name: Get apps route suffix
-  block:
-    - openshift_v1_route:
-        name: dummy
-        namespace: "{{ namespace }}"
-        state: present
-        spec_to_kind: Service
-        spec_to_name: dummy
-        spec_port_target_port: 8080
-      register: dummy_route
-    - set_fact:
-        apps_hostname_suffix: "{{ dummy_route.route.spec.host|regex_replace('^dummy-' + namespace + '\\.(.*)$', '\\1') }}"
-    - openshift_v1_route:
-        name: dummy
-        namespace: "{{ namespace }}"
-        state: absent
