--- a/apb/roles/provision-java-starter-guides/templates/guides-php.yml
+++ b/apb/roles/provision-java-starter-guides/templates/guides-php.yml
@@ -67,10 +67,10 @@ objects:
         - parksmap-logging
         - parksmap-permissions
         - parksmap-rsh
-        - nationalparks-java
-        - nationalparks-databases
+        - nationalparks-php
+        - nationalparks-php-databases
         - nationalparks-application-health
-        - nationalparks-codechanges-gogs
+        - nationalparks-php-codechanges-gogs
         - mlbparks-templates
         - mlbparks-clustering
         - mlbparks-binary-build
