Updated workshopper to quay.io version

--- a/apb/roles/provision-java-starter-guides/templates/guides-java.yml
+++ b/apb/roles/provision-java-starter-guides/templates/guides-java.yml
@@ -90,7 +90,7 @@ objects:
     - name: latest
       from:
         kind: DockerImage
-        name: osevg/workshopper:latest
+        name: quay.io/osevg/workshopper:latest
       importPolicy: {}
       referencePolicy:
         type: Source
