--- a/apb/roles/provision-java-starter-guides/templates/guides-nodejs.yml
+++ b/apb/roles/provision-java-starter-guides/templates/guides-nodejs.yml
@@ -89,7 +89,7 @@ objects:
     - name: latest
       from:
         kind: DockerImage
-        name: osevg/workshopper:latest
+        name: quay.io/osevg/workshopper:latest
       importPolicy: {}
       referencePolicy:
         type: Source
