--- a/apb/Makefile
+++ b/apb/Makefile
@@ -1,20 +1,10 @@
-DOCKERHOST = docker.io
-DOCKERORG = java-starter-guides
-IMAGENAME = java-starter-guides
+IMAGENAME = starter-workshop-apb
 TAG = latest
 USER=$(shell id -u)
 PWD=$(shell pwd)
-build_and_push: apb_build docker_push apb_push
+build_and_push: apb_build
 
 .PHONY: apb_build
 apb_build:
 	apb prepare
-	docker build -t $(DOCKERHOST)/$(DOCKERORG)/$(IMAGENAME):$(TAG) .
-
-.PHONY: docker_push
-docker_push:
-	docker push $(DOCKERHOST)/$(DOCKERORG)/$(IMAGENAME):$(TAG)
-
-.PHONY: apb_push
-apb_push:
-	apb push
+	docker build -t $(IMAGENAME):$(TAG) .
