--- a/apb/requirements-travis.yml
+++ b/apb/requirements-travis.yml
@@ -11,7 +11,7 @@
   name: openshift_workshopper
 
 - src: siamaksade.openshift_eclipse_che
-  version: ocp-3.10
+  version: ocp-3.10-1
   name: openshift_eclipse_che
 
 - src: ansible.kubernetes-modules
