--- a/apb/roles/provision-java-starter-guides/templates/guides-java.yml
+++ b/apb/roles/provision-java-starter-guides/templates/guides-java.yml
@@ -72,11 +72,13 @@ objects:
         - nationalparks-application-health
         - nationalparks-java-pipeline
         - nationalparks-java-pipeline-codechanges-gogs
+      #  - nationalparks-java-che
         - mlbparks-templates
         - mlbparks-clustering
         - mlbparks-binary-build
         - mlbparks-debugging
         - common-further-resources
+        - common-workshop-links
 - kind: ImageStream
   apiVersion: v1
   metadata:
