--- a/_workshops/java-starter-guides.yml
+++ b/_workshops/java-starter-guides.yml
@@ -23,8 +23,10 @@ modules:
   - nationalparks-application-health
   - nationalparks-java-pipeline
   - nationalparks-java-pipeline-codechanges-gogs
+#  - nationalparks-java-che
   - mlbparks-templates
   - mlbparks-clustering
   - mlbparks-binary-build
   - mlbparks-debugging
   - common-further-resources
+  - common-workshop-links
