--- a/_modules.yml
+++ b/_modules.yml
@@ -44,19 +44,19 @@ config:
     # 
     - name: DOWNLOAD_CLIENT_WINDOWS
       desc: URL to download oc client for Windows
-      value: "https://github.com/openshift/origin/releases/download/v3.10.0/openshift-origin-client-tools-v3.10.0-dd10d17-windows.zip"
+      value: "https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-windows.zip"
     - name: DOWNLOAD_CLIENT_MAC
       desc: URL to download oc client for macOS
-      value: "https://github.com/openshift/origin/releases/download/v3.10.0/openshift-origin-client-tools-v3.10.0-dd10d17-mac.zip"
+      value: "https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-mac.zip"
     - name: DOWNLOAD_CLIENT_LIN32
       desc: URL to download oc client for 32bit Linux
       value: ""
     - name: DOWNLOAD_CLIENT_LIN64
       desc: URL to download oc client for 64bit Linux
-      value: "https://github.com/openshift/origin/releases/download/v3.10.0/openshift-origin-client-tools-v3.10.0-dd10d17-linux-64bit.tar.gz"
+      value: "https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz"
     - name: OC_VERSION
       desc: Expected oc version when `oc version` is executed
-      value: "oc v3.10.0+dd10d1\nkubernetes v1.10.0+b81c8f8"
+      value: "oc v3.11.0+0cbc58b\nkubernetes v1.11.0+d4cacc0"
     ##
     # Module docker
     # 
