Updating apb to support tracking workshop deployments

--- a/apb/roles/provision-java-starter-guides/tasks/main.yml
+++ b/apb/roles/provision-java-starter-guides/tasks/main.yml
@@ -66,3 +66,5 @@
 
 - include_tasks: per_user.yml
   with_sequence: start=1 end={{ user_count }} format={{ user_format }}
+
+- include_tasks: track-workshop-deployment.yml
