--- a/apb/requirements-travis.yml
+++ b/apb/requirements-travis.yml
@@ -14,6 +14,10 @@
   version: ocp-3.11
   name: openshift_eclipse_che
 
+- src: openshift_labs.workshop_deployment_tracker
+  version: 1.0.1
+  name: workshop_deployment_tracker
+
 - src: ansible.kubernetes-modules
 
 - src: ansibleplaybookbundle.asb-modules
