Updated apb to track workshop deployment

--- a/apb/requirements.yml
+++ b/apb/requirements.yml
@@ -13,3 +13,7 @@
 - src: siamaksade.openshift_eclipse_che
   version: ocp-3.10-1
   name: openshift_eclipse_che
+
+- src: openshift_labs.workshop_deployment_tracker
+  version: 1.0.1
+  name: workshop_deployment_tracker
