--- a/apb/roles/provision-java-starter-guides/tasks/track-workshop-deployment.yml
+++ b/apb/roles/provision-java-starter-guides/tasks/track-workshop-deployment.yml
@@ -6,4 +6,4 @@
     name: workshop_deployment_tracker
   vars:
     apps_hostname_suffix: "{{ apps_hostname_suffix }}"
-    workshop_type: starter
+    workshop_type: "{{ workshop_type }}"
