Health checks follow redirects and generate dynamic users, this endpoint is static

--- a/apb/roles/provision-java-starter-guides/templates/guides-java.yml
+++ b/apb/roles/provision-java-starter-guides/templates/guides-java.yml
@@ -132,7 +132,7 @@ objects:
           livenessProbe:
             failureThreshold: 5
             httpGet:
-              path: /
+              path: /debug/session
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 15
@@ -146,7 +146,7 @@ objects:
           readinessProbe:
             failureThreshold: 5
             httpGet:
-              path: /
+              path: /debug/session
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 15
