--- a/apb/roles/provision-java-starter-guides/templates/guides-python.yml
+++ b/apb/roles/provision-java-starter-guides/templates/guides-python.yml
@@ -130,7 +130,7 @@ objects:
           livenessProbe:
             failureThreshold: 5
             httpGet:
-              path: /
+              path: /debug/session
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 15
@@ -144,7 +144,7 @@ objects:
           readinessProbe:
             failureThreshold: 5
             httpGet:
-              path: /
+              path: /debug/session
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 15
