Workshopper deployment use static endpoint for healthchecks

--- a/guides-template.yaml
+++ b/guides-template.yaml
@@ -138,7 +138,7 @@ objects:
           livenessProbe:
             failureThreshold: 5
             httpGet:
-              path: /
+              path: /debug/session
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 15
@@ -152,7 +152,7 @@ objects:
           readinessProbe:
             failureThreshold: 5
             httpGet:
-              path: /
+              path: /debug/session
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 15
