--- a/apb/roles/provision-java-starter-guides/templates/guides-python.yml
+++ b/apb/roles/provision-java-starter-guides/templates/guides-python.yml
@@ -94,6 +94,13 @@ objects:
       importPolicy: {}
       referencePolicy:
         type: Source
+    - name: 0.4
+      from:
+        kind: DockerImage
+        name: quay.io/osevg/workshopper:0.4
+      importPolicy: {}
+      referencePolicy:
+        type: Source
 - kind: DeploymentConfig
   apiVersion: v1
   metadata:
@@ -176,7 +183,7 @@ objects:
         - ${APPNAME}
         from:
           kind: ImageStreamTag
-          name: workshopper:latest
+          name: workshopper:0.4
       type: ImageChange
 - kind: Service
   apiVersion: v1
