--- a/apb/roles/provision-java-starter-guides/templates/guides-php.yml
+++ b/apb/roles/provision-java-starter-guides/templates/guides-php.yml
@@ -94,7 +94,7 @@ objects:
       importPolicy: {}
       referencePolicy:
         type: Source
-    - name: 0.4
+    - name: '0.4'
       from:
         kind: DockerImage
         name: quay.io/osevg/workshopper:0.4
